[gd_scene load_steps=45 format=2]

[ext_resource path="res://chapters/01_hadoscaphe/locations/safebay/safebay_background.png" type="Texture" id=1]
[ext_resource path="res://characters/char/Char.tscn" type="PackedScene" id=2]
[ext_resource path="res://chapters/01_hadoscaphe/locations/safebay/safebay_foreground.png" type="Texture" id=3]
[ext_resource path="res://chapters/01_hadoscaphe/locations/safebay/safebay_set.png" type="Texture" id=4]
[ext_resource path="res://chapters/01_hadoscaphe/locations/safebay/Safebay.gd" type="Script" id=5]
[ext_resource path="res://chapters/01_hadoscaphe/locations/safebay/safebay_door_right1.png" type="Texture" id=6]
[ext_resource path="res://chapters/01_hadoscaphe/common_resources/HadDoorButton.tscn" type="PackedScene" id=7]
[ext_resource path="res://chapters/01_hadoscaphe/locations/safebay/safebay_door_bottom1.png" type="Texture" id=8]
[ext_resource path="res://chapters/01_hadoscaphe/locations/safebay/safebay_door_right2.png" type="Texture" id=9]
[ext_resource path="res://chapters/01_hadoscaphe/locations/safebay/safebay_door_top1.png" type="Texture" id=10]
[ext_resource path="res://chapters/01_hadoscaphe/locations/safebay/safebay_door_bottom2.png" type="Texture" id=11]
[ext_resource path="res://chapters/01_hadoscaphe/locations/safebay/safebay_door_top2.png" type="Texture" id=12]
[ext_resource path="res://chapters/01_hadoscaphe/locations/safebay/safebay_cache_top.png" type="Texture" id=13]
[ext_resource path="res://chapters/01_hadoscaphe/locations/safebay/safebay_cache_bottom.png" type="Texture" id=14]
[ext_resource path="res://chapters/01_hadoscaphe/locations/safebay/safebay_cache.png" type="Texture" id=15]
[ext_resource path="res://chapters/01_hadoscaphe/locations/safebay/safebay_cache__right.png" type="Texture" id=16]
[ext_resource path="res://chapters/01_hadoscaphe/locations/safebay/smoke.png" type="Texture" id=17]
[ext_resource path="res://chapters/01_hadoscaphe/common_resources/smoke.wav" type="AudioStream" id=18]
[ext_resource path="res://objects/SlidingDoor.tscn" type="PackedScene" id=19]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

uniform float u_amount = 0.01;

float get_noise(vec2 uv) {
    return fract(sin(dot(uv ,vec2(12.9898,78.233))) * 43758.5453);
}

void fragment() {
    float n = 2.0 * get_noise(UV + vec2(TIME, 0.0)) - 1.0;
    COLOR = texture(TEXTURE, UV) + n * u_amount;
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/u_amount = 0.01

[sub_resource type="Animation" id=3]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=4]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}

[sub_resource type="Animation" id=5]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=6]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}

[sub_resource type="Animation" id=7]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=8]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}

[sub_resource type="Animation" id=9]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=10]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}

[sub_resource type="Animation" id=11]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=12]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}

[sub_resource type="Animation" id=13]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=14]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}

[sub_resource type="Animation" id=15]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=16]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}

[sub_resource type="Animation" id=17]
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=18]
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}

[sub_resource type="Animation" id=19]
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=20]
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}

[sub_resource type="Gradient" id=21]
offsets = PoolRealArray( 0, 0.668966 )
colors = PoolColorArray( 0.776471, 0.635294, 0, 0, 1, 0.820313, 0, 1 )

[sub_resource type="NavigationPolygon" id=22]
vertices = PoolVector2Array( 152.307, 104, 74.3074, 102, 98.3074, 95, 158.307, 97, 158.307, 101, 331.307, 136, 382.307, 134, 406.307, 146, 332.307, 147, 331.307, 137, 191.307, 111, 147.307, 109, 152.307, 106, 161.307, 101, 173.307, 95, 205.307, 104, 236.307, 95, 230.307, 99, 187.307, 217, 130.307, 217, 155.307, 192, 187.307, 208, 201.307, 208, 202.307, 194, 202.307, 198, 332.307, 155, 339.307, 167, 300.307, 167, 299.307, 162, 298.307, 156, 305.307, 151, 243.307, 227, 196.307, 225, 201.307, 215, 244.307, 217, 214.307, 189, 251.307, 189, 246.307, 202, 302.307, 129, 303.307, 143, 261.307, 142, 263.307, 137, 301.307, 127, 297.307, 151, 209.307, 198, 324.307, 137, 246.307, 209, 308.307, 127, 318.307, 127, 307.307, 129, 265.307, 128, 264.307, 131, 226.307, 102, 223.307, 104 )
polygons = [ PoolIntArray( 0, 1, 2, 3, 4 ), PoolIntArray( 5, 6, 7, 8, 9 ), PoolIntArray( 10, 11, 12, 13, 14, 15 ), PoolIntArray( 14, 16, 17 ), PoolIntArray( 18, 19, 20, 21 ), PoolIntArray( 22, 21, 20, 23, 24 ), PoolIntArray( 25, 26, 27, 28, 29, 30 ), PoolIntArray( 31, 32, 33, 34 ), PoolIntArray( 35, 36, 37 ), PoolIntArray( 38, 39, 40, 41, 42 ), PoolIntArray( 29, 43, 30 ), PoolIntArray( 44, 34, 33, 22, 24 ), PoolIntArray( 45, 9, 8, 25, 30, 39 ), PoolIntArray( 34, 44, 35, 37, 46 ), PoolIntArray( 28, 34, 46, 29 ), PoolIntArray( 47, 48, 45, 39, 49 ), PoolIntArray( 38, 49, 39 ), PoolIntArray( 50, 42, 41, 51 ), PoolIntArray( 51, 41, 52, 17 ), PoolIntArray( 14, 17, 52, 53, 15 ), PoolIntArray( 4, 13, 12, 0 ) ]
outlines = [ PoolVector2Array( 74.3074, 102, 98.3074, 95, 158.307, 97, 158.307, 101, 161.307, 101, 173.307, 95, 236.307, 95, 230.307, 99, 264.307, 131, 265.307, 128, 301.307, 127, 302.307, 129, 307.307, 129, 308.307, 127, 318.307, 127, 324.307, 137, 331.307, 137, 331.307, 136, 382.307, 134, 406.307, 146, 332.307, 147, 332.307, 155, 339.307, 167, 300.307, 167, 299.307, 162, 244.307, 217, 243.307, 227, 196.307, 225, 201.307, 215, 201.307, 208, 187.307, 208, 187.307, 217, 130.307, 217, 155.307, 192, 202.307, 194, 202.307, 198, 209.307, 198, 214.307, 189, 251.307, 189, 246.307, 202, 246.307, 209, 298.307, 156, 297.307, 151, 305.307, 151, 303.307, 143, 261.307, 142, 263.307, 137, 226.307, 102, 223.307, 104, 205.307, 104, 191.307, 111, 147.307, 109, 152.307, 106, 152.307, 104 ) ]

[sub_resource type="Gradient" id=23]
offsets = PoolRealArray( 0, 0.940741, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 0.696296, 0.696296, 0.696296, 0.696296, 0, 0, 0, 0 )

[sub_resource type="Animation" id=24]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=25]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}

[node name="Safebay" type="Node2D"]
material = SubResource( 2 )
script = ExtResource( 5 )

[node name="Background" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false
hframes = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="Background"]
anims/day = SubResource( 3 )
anims/night = SubResource( 4 )

[node name="DoorTop1" parent="." groups=[
"arrow_W",
] instance=ExtResource( 19 )]
position = Vector2( 97, 79 )
to_room = "cryopod"
to_x = 386
to_y = 144
flip_h = true
door_id = 1

[node name="CollisionPolygon2D" parent="DoorTop1" index="0"]
polygon = PoolVector2Array( -19, 19, -17, -24, -16, -27, -11, -25, -7, -19, -7, 15 )

[node name="PointToRoom" parent="DoorTop1" index="1"]
position = Vector2( -8, 19 )

[node name="Sprite" parent="DoorTop1" index="2"]
position = Vector2( -13, -4 )
texture = ExtResource( 10 )
hframes = 2

[node name="AnimationPlayer" parent="DoorTop1" index="6"]
anims/day = SubResource( 5 )
anims/night = SubResource( 6 )

[node name="DoorTop2" parent="." instance=ExtResource( 19 )]
position = Vector2( 168, 85 )
to_room = "cryopod"
to_x = 210
to_y = 182
flip_h = true
door_id = 4

[node name="CollisionPolygon2D" parent="DoorTop2" index="0"]
polygon = PoolVector2Array( -121, 80, -117, 105, -87, 86 )
disabled = true

[node name="PointToRoom" parent="DoorTop2" index="1"]
position = Vector2( -8, 19 )

[node name="Sprite" parent="DoorTop2" index="2"]
position = Vector2( -13, -4 )
texture = ExtResource( 12 )
hframes = 2

[node name="AnimationPlayer" parent="DoorTop2" index="6"]
anims/day = SubResource( 7 )
anims/night = SubResource( 8 )

[node name="DoorBottom1" parent="." groups=[
"arrow_W",
] instance=ExtResource( 19 )]
position = Vector2( 138, 182 )
to_room = "science"
flip_h = true
door_id = 2

[node name="CollisionPolygon2D" parent="DoorBottom1" index="0"]
polygon = PoolVector2Array( -5, 25, 4, 17, 4, -22, 1, -26, -2, -25, -5, -12 )
disabled = true

[node name="PointToRoom" parent="DoorBottom1" index="1"]
position = Vector2( 5, 24 )

[node name="Sprite" parent="DoorBottom1" index="2"]
texture = ExtResource( 8 )
hframes = 2

[node name="AnimationPlayer" parent="DoorBottom1" index="6"]
anims/day = SubResource( 9 )
anims/night = SubResource( 10 )

[node name="DoorBottom2" parent="." instance=ExtResource( 19 )]
position = Vector2( 202, 183 )
door_id = 5

[node name="CollisionPolygon2D" parent="DoorBottom2" index="0"]
polygon = PoolVector2Array( 119, 48, 106, 73, 131, 69 )
disabled = true

[node name="PointToRoom" parent="DoorBottom2" index="1"]
position = Vector2( 5, 24 )

[node name="Sprite" parent="DoorBottom2" index="2"]
texture = ExtResource( 11 )
hframes = 2

[node name="AnimationPlayer" parent="DoorBottom2" index="6"]
anims/day = SubResource( 11 )
anims/night = SubResource( 12 )

[node name="DoorRight1" parent="." groups=[
"arrow_E",
] instance=ExtResource( 19 )]
position = Vector2( 399, 119 )
to_room = "control"
to_x = 136
to_y = 152
door_id = 3

[node name="CollisionPolygon2D" parent="DoorRight1" index="0"]
polygon = PoolVector2Array( -5, -19, -5, 17, 5, 22, 5, -21, 3, -24, -1, -24 )

[node name="PointToRoom" parent="DoorRight1" index="1"]
position = Vector2( -6, 21 )

[node name="Sprite" parent="DoorRight1" index="2"]
texture = ExtResource( 6 )
hframes = 2

[node name="AnimationPlayer" parent="DoorRight1" index="6"]
anims/day = SubResource( 13 )
anims/night = SubResource( 14 )

[node name="DoorRight2" parent="." instance=ExtResource( 19 )]
position = Vector2( 332, 121 )
door_id = 6

[node name="CollisionPolygon2D" parent="DoorRight2" index="0"]
polygon = PoolVector2Array( 24, 41, 52, 41, 36, 54 )
disabled = true

[node name="Sprite" parent="DoorRight2" index="2"]
texture = ExtResource( 9 )
hframes = 2

[node name="AnimationPlayer" parent="DoorRight2" index="6"]
anims/day = SubResource( 15 )
anims/night = SubResource( 16 )

[node name="Set" type="Sprite" parent="."]
texture = ExtResource( 4 )
centered = false
hframes = 2
__meta__ = {
"_edit_lock_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Set"]
anims/day = SubResource( 17 )
anims/night = SubResource( 18 )

[node name="TopDoorButton" parent="." instance=ExtResource( 7 )]
position = Vector2( 108, 77 )
action_name = "TopDoorButton"
action_type = "push"
flip_h = true
door_id = 1

[node name="BottomDoorButton" parent="." instance=ExtResource( 7 )]
position = Vector2( 160, 174 )
action_name = "BottomDoorButton"
action_type = "push"
flip_h = true
door_id = 2

[node name="RightDoorButton" parent="." instance=ExtResource( 7 )]
position = Vector2( 375, 115 )
action_name = "RightDoorButton"
action_type = "push"
door_id = 3

[node name="Animation" parent="RightDoorButton" index="1"]
anims/off = SubResource( 19 )
anims/on = SubResource( 20 )

[node name="Char" parent="." instance=ExtResource( 2 )]

[node name="Line2D" parent="Char" index="0"]
visible = false
points = PoolVector2Array( 319.547, 149.936 )
default_color = Color( 1, 0.796078, 0, 1 )
gradient = SubResource( 21 )

[node name="Sprite" parent="Char" index="1"]
position = Vector2( 393, 140 )

[node name="Eyes" parent="Char/Sprite" index="1"]
position = Vector2( 1, -37 )

[node name="EyesPosition" parent="Char/Sprite" index="3"]
visible = false

[node name="NavigationPolygonInstance" parent="Char/Navigation2D" index="0"]
visible = false
position = Vector2( -0.307358, 0 )
navpoly = SubResource( 22 )

[node name="Smoke" type="CPUParticles2D" parent="."]
position = Vector2( 539, 85 )
amount = 80
texture = ExtResource( 17 )
direction = Vector2( 0, 1 )
spread = 30.0
gravity = Vector2( 0, 10 )
initial_velocity = 100.0
linear_accel = -100.0
tangential_accel_random = 0.03
damping = 5.0
color_ramp = SubResource( 23 )
anim_speed_random = 1.0
__meta__ = {
"_edit_group_": true
}

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="Smoke"]
stream = ExtResource( 18 )
attenuation = 0.63728
bus = "Fx"

[node name="Foreground" type="Sprite" parent="."]
position = Vector2( 242, 131 )
texture = ExtResource( 3 )
hframes = 2
__meta__ = {
"_edit_lock_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Foreground"]
anims/day = SubResource( 24 )
anims/night = SubResource( 25 )

[node name="Polygons" type="Area2D" parent="."]
visible = false

[node name="NavMesh0" type="CollisionPolygon2D" parent="Polygons"]
polygon = PoolVector2Array( 147, 109, 152, 106, 152, 105, 159, 101, 161, 101, 173, 95, 236, 95, 230, 99, 264, 131, 265, 128, 301, 127, 302, 129, 307, 129, 308, 127, 318, 127, 324, 137, 331, 136, 332, 147, 332, 155, 339, 167, 300, 167, 299, 162, 244, 217, 243, 227, 196, 225, 201, 215, 201, 208, 203, 198, 209, 198, 214, 189, 251, 189, 246, 202, 246, 209, 298, 156, 297, 151, 305, 151, 303, 143, 261, 142, 263, 137, 226, 102, 223, 104, 205, 104, 191, 111 )

[node name="NavMesh1" type="CollisionPolygon2D" parent="Polygons"]
polygon = PoolVector2Array( 98, 95, 158, 97, 158, 101, 159, 101, 152, 105, 152, 104, 74, 102 )

[node name="NavMesh2" type="CollisionPolygon2D" parent="Polygons"]
polygon = PoolVector2Array( 203, 198, 201, 208, 187, 208, 187, 217, 130, 217, 155, 192, 202, 194, 202, 198 )

[node name="NavMesh3" type="CollisionPolygon2D" parent="Polygons"]
polygon = PoolVector2Array( 331, 136, 331, 135, 382, 134, 406, 146, 332, 147 )

[node name="Tween" type="Tween" parent="."]

[node name="Masks" type="Node2D" parent="."]
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Mask0" type="Sprite" parent="Masks"]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 244, 119 )
texture = ExtResource( 15 )

[node name="Mask1" type="Sprite" parent="Masks"]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 115, 72 )
texture = ExtResource( 13 )

[node name="Mask2" type="Sprite" parent="Masks"]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 165, 184 )
texture = ExtResource( 14 )

[node name="Mask3" type="Sprite" parent="Masks"]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 373, 116 )
texture = ExtResource( 16 )
[connection signal="order_interaction" from="TopDoorButton" to="." method="_on_TopDoorButton_order_interaction"]
[connection signal="order_interaction" from="BottomDoorButton" to="." method="_on_BottomDoorButton_order_interaction"]
[connection signal="order_interaction" from="RightDoorButton" to="." method="_on_RightDoorButton_order_interaction"]

[editable path="DoorTop1"]

[editable path="DoorTop2"]

[editable path="DoorBottom1"]

[editable path="DoorBottom2"]

[editable path="DoorRight1"]

[editable path="DoorRight2"]

[editable path="RightDoorButton"]

[editable path="Char"]
